--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,8 +1,105 @@
-.headerContainer{
-    display:flex;
-    justify-content: space-between;
-    padding: 30px;
-    align-items: center;
-    margin: 0;
+.headerContainer {
+  /* position: fixed; */
+  /* z-index: 100; */
+  display: flex;
+  justify-content: space-between;
+  margin: 30px;
+  align-items: center;
+  margin: 0;
+  width: 100%;
 }
-.headerContainer h1 {margin:0;}
+.headerContainer h1 {
+  margin: 0;
+}
+
+.menuHamburger {
+  position: fixed;
+  z-index: 1100;
+  font-size: 20px;
+  width: 100px;
+  top: 0;
+  right: 0;
+  /* margin-right: 100px; */
+  padding: 10px 20px 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: var(--dominant);
+  border-radius: 30px;
+}
+
+.menuOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  z-index: 1;
+
+  background-color: var(--dominant);
+}
+
+.footerContacts {
+  grid-area: contacts;
+  margin-left: 50px;
+}
+.footerCreator {
+  grid-area: creator;
+  margin-left: 50px;
+}
+.footerLinkContainer {
+  grid-area: linkcontainer;
+  margin-right: 50px;
+}
+.linkItem {
+}
+
+.footerLetsTalk {
+  grid-area: lt;
+  font-size: 20.5vw;
+  justify-self: center;
+  align-self: center;
+}
+
+.footerContainer {
+    overflow: hidden;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-areas:
+    "contacts . linkcontainer"
+    "creator . linkcontainer"
+    "lt lt lt";
+  align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+  .footerContainer {
+    grid-template-areas:
+      "contacts"
+      "linkcontainer"
+      "creator"
+      "lt";
+    align-items: center;
+  }
+  .footerLinkContainer {
+    margin-left: 80px;
+  }
+  .footerLetsTalk {
+    font-size: 15.5vw;
+  }
+
+  .footerContacts {
+    margin: 0;
+    width: 100%;
+    font-size: 15px;
+    text-align: center;
+  }
+  .footerCreator {
+    width: 100%;
+    align-self: center;
+  }
+}
+
+
