--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root {
+  /* --dominant: #1e90ff; */
+  --white: #ffffff;
+  --background: #003F5C;
+  --accents: #472B62;
+  --dominant: #FB5B5A;
+}
