--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -16,28 +16,30 @@
   position: fixed;
   z-index: 1100;
   font-size: 20px;
-  width: 100px;
+  
   top: 0;
   right: 0;
   /* margin-right: 100px; */
-  padding: 10px 20px 10px 20px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  background-color: var(--dominant);
+  margin: 20px;
   border-radius: 30px;
+}
+.name{
+  margin: 10px!important;
 }
 
 .menuOverlay {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   z-index: 1;
-
-  background-color: var(--dominant);
+color: var(--background);
+  background-color: var(--white);
 }
 
 .footerContacts {
@@ -50,7 +52,7 @@
 }
 .footerLinkContainer {
   grid-area: linkcontainer;
-  margin-right: 50px;
+  margin-right: 100px;
 }
 .linkItem {
 }
