--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -6,6 +6,9 @@
   justify-content: center;
   align-items: center;
 }
+.heroText{
+  font-size: 40px;
+}
 .aboutContainer {
   width: 100%;
 
@@ -19,56 +22,45 @@
   font-size: 20px;
 }
 
-
-.center{
-    width: 100%;
-    display: flex;
-
-    align-items: center;
-    justify-content: center;
-}
-.worksContainer {
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;         /* Opera/IE 8+ */
-    padding: 5px;
+.center {
   width: 100%;
   display: flex;
-height: 100vh; 
-justify-content: center;
+
+  align-items: center;
+  justify-content: center;
+}
+.worksContainer {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box; /* Opera/IE 8+ */
+  padding: 5px;
+  width: 100%;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
   flex-direction: column;
   max-width: 1000px;
-
 }
 
 .worksElement {
--webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
--moz-box-sizing: border-box;    /* Firefox, other Gecko */
-box-sizing: border-box;         /* Opera/IE 8+ */
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box; /* Opera/IE 8+ */
   padding: 5px 30px;
+  border: 1px solid; 
   width: 100%;
 
 }
-div.worksElement:last-child {
-    /* border-bottom: 1px solid;  */
 
+.row1 {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  flex-direction: row;
 }
-.borderFix{
-    border-top: 1px solid;
-    border-left: 1px solid;
-    border-right: 1px solid; 
-  
-}
-.row1{
-width: 100%;
-    justify-content: space-between;
-display: flex;
-flex-direction: row;
-}
-.row2{
-    display: flex;
-    flex-direction: row;
-    
+.row2 {
+  display: flex;
+  flex-direction: row;
 }
 .title {
   align-items: center;
@@ -79,6 +71,11 @@ flex-direction: row;
   justify-content: flex-end;
 }
 .descriere {
+  display: flex;
+  justify-content: center;
+  
 }
 .image {
+  margin-left:20px;
+  height:200px;
 }
