--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
-canvas {
-  width: 100%;
-  height: 100vh;
-  /* position: absolute;
-  top: 0; */
-  pointer-events: none;
-  overflow: hidden;
-}
+#scale {
+   
+    stroke-width: 3px;
+  }
+
+  #scale {
+    height: 250px;
+    width: 200px;
+    text-align: center;
+    margin: 0 auto;
+  }
