--- a/src/index.css
+++ b/src/index.css
@@ -29,17 +29,19 @@ a{
 
 
 .curtains-canvas {
+  z-index: -10;
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
 /* basic plane */
 
 .SimplePlane {
-  width: 100vw;
+
+  width: 100%;
   height: 100vh;
 }
 
