--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -23,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin: 20px;
+  margin-top: 20px;
   border-radius: 30px;
 }
 .name{
