--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -36,7 +36,7 @@
   padding: 5px;
   width: 100%;
   display: flex;
-  height: 100vh;
+
   justify-content: center;
   flex-direction: column;
   max-width: 1000px;
@@ -48,6 +48,7 @@
   box-sizing: border-box; /* Opera/IE 8+ */
   padding: 5px 30px;
   border: 1px solid; 
+  transition:0.1s;
   width: 100%;
 
 }
@@ -64,6 +65,9 @@
 }
 .title {
   align-items: center;
+}
+.links a {
+  margin-right: 10px;
 }
 .links {
   display: flex;
