--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -47,7 +47,7 @@
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
   padding: 5px 30px;
-  border: 1px solid; 
+  border-top: 1px solid; 
   transition:0.1s;
   width: 100%;
 
@@ -62,6 +62,8 @@
 .row2 {
   display: flex;
   flex-direction: row;
+  z-index:-100;
+  position:relative;
 }
 .title {
   align-items: center;
