--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -16,7 +16,6 @@
   position: fixed;
   z-index: 1100;
   font-size: 20px;
-  
   top: 0;
   right: 0;
   /* margin-right: 100px; */
@@ -24,7 +23,7 @@
   align-items: center;
   justify-content: space-around;
   margin-top: 20px;
-  border-radius: 30px;
+  
 }
 .name{
   margin: 10px!important;
@@ -77,6 +76,9 @@ color: var(--background);
 }
 
 @media only screen and (max-width: 600px) {
+  .menuHamburger{
+    margin-right: -25px;
+  }
   .footerContainer {
     grid-template-areas:
       "contacts"
@@ -94,6 +96,7 @@ color: var(--background);
 
   .footerContacts {
     margin: 0;
+    margin-top:15px;
     width: 100%;
     font-size: 15px;
     text-align: center;
