--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -84,4 +84,26 @@
 .image {
   margin-left:20px;
   height:200px;
+  aspect-ratio: auto;
+}
+
+@media only screen and (max-width: 900px) {
+  .row2 {
+    display: flex;
+    flex-direction: column;
+  }
+    .descriere {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+  
+}
+.image {
+  margin-left:20px;
+  height:auto !important;
+  width:auto !important; 
+  margin: 0;
+}
+
+
 }
