--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -60,13 +60,16 @@ color: var(--background);
   grid-area: lt;
   font-size: 20.5vw;
   justify-self: center;
-  align-self: center;
+  align-self: end;
 }
 
 .footerContainer {
+ position: relative;
+ bottom: 0;
     overflow: hidden;
   width: 100%;
-  height: 100vh;
+  height: 100vh !important;
+
   display: grid;
   grid-template-areas:
     "contacts . linkcontainer"
