--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -11,6 +11,7 @@
 }
 .aboutContainer {
   width: 100%;
+  border-bottom: solid 1px;
 
   
   display: flex;
@@ -40,6 +41,7 @@ justify-content: center;
 
   justify-content: center;
   flex-direction: column;
+  border-bottom:solid 1px;
   
 }
 
