--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -9,6 +9,12 @@
 .heroText{
   font-size: 40px;
 }
+.photo{
+  aspect-ratio: 433/576;
+  width: 30%;
+  position:absolute;
+  right: 50px;
+}
 .aboutContainer {
   width: 100%;
   border-bottom: solid 1px;
@@ -67,6 +73,7 @@ justify-content: center;
   flex-direction: row;
   z-index:-100;
   position:relative;
+  justify-content:space-between;
 }
 .title {
   align-items: center;
@@ -127,3 +134,46 @@ justify-content: center;
 
 }
 
+
+.circle{
+  z-index: 100;
+position: absolute;
+width: 200px;
+height: 200px;
+border-radius: 50%;
+display: flex;
+justify-content: center;
+align-items: center;
+bottom: 100px;
+right: 100px;
+}
+.greenDot{
+position: absolute;
+width: 100px;
+height: 100px;
+border-radius: 50%;
+background-color: green;
+}
+
+.textC{
+position: absolute;
+width: 100%;
+height: 100%;
+animation: rotateText 10s linear infinite;
+}
+.textC span {
+  position: absolute;
+  left: 50%;
+  font-size: 1.2em;
+  transform-origin: 0 100px;
+
+}
+
+@keyframes rotateText {
+  0% {
+    transform: rotate(360deg);
+  }
+  100%{
+    transform: rotate(0deg);
+  }
+}
