--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,20 @@ a{
 .SimplePlane img {
   display: none;
 }
+
+
+::-webkit-scrollbar{
+  /* background: #e6e6e6;  */
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track{
+  background-color: #1a1a1a;
+  opacity: 0;
+}
+::-webkit-scrollbar-thumb{
+  background-color: #e6e6e6;
+  color: #e6e6e6;
+}
