--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -136,10 +136,10 @@ justify-content: center;
 
 
 .circle{
-  z-index: 100;
-position: absolute;
-width: 200px;
-height: 200px;
+  z-index: 102;
+position:absolute;
+width: 150px;
+height: 150px;
 border-radius: 50%;
 display: flex;
 justify-content: center;
@@ -149,13 +149,13 @@ right: 100px;
 }
 .greenDot{
 position: absolute;
-width: 100px;
-height: 100px;
+width: 50px;
+height: 50px;
 border-radius: 50%;
-background-color: green;
+background-color: #4DA167;
 }
 
-.textC{
+.textC {
 position: absolute;
 width: 100%;
 height: 100%;
@@ -164,8 +164,8 @@ animation: rotateText 10s linear infinite;
 .textC span {
   position: absolute;
   left: 50%;
-  font-size: 1.2em;
-  transform-origin: 0 100px;
+  font-size: 1.4em;
+  transform-origin: 0 75px;
 
 }
 
