--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -17,13 +17,13 @@
 }
 .aboutContainer {
   width: 100%;
-  border-bottom: solid 1px;
+  border-bottom: solid 2px;
 
   
   display: flex;
   flex-direction: column;
 justify-content: center;
-  height: 100vh;
+  height: 120vh;
 }
 .aboutText {
   margin:50px;
@@ -47,7 +47,7 @@ justify-content: center;
 
   justify-content: center;
   flex-direction: column;
-  border-bottom:solid 1px;
+  border-bottom:solid 2px;
   
 }
 
@@ -56,7 +56,7 @@ justify-content: center;
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
   padding: 5px 30px;
-  border-top: 1px solid; 
+  border-top: 2px solid; 
   transition:0.1s;
   width: 100%;
 
@@ -136,7 +136,8 @@ justify-content: center;
 
 
 .circle{
-  z-index: 102;
+  /* z-index: 1; */
+
 position:absolute;
 width: 150px;
 height: 150px;
@@ -176,4 +177,25 @@ animation: rotateText 10s linear infinite;
   100%{
     transform: rotate(0deg);
   }
+}
+
+.overL{
+  z-index: 2;
+  width: 100%;
+  height:100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--background);
+}
+
+.pas{
+  /* font-size: 16px; */
+  /* font-family: 'Kelly Slab', cursive; */
+  text-transform: uppercase;
+  line-height: 1.3;
+  border-bottom-width: 2px;
+  border-style: solid;
+  border-color: transparent;
+  /* letter-spacing: 1.1px; */
 }
