--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -59,16 +59,19 @@ justify-content: center;
   border-top: 2px solid; 
   transition:0.1s;
   width: 100%;
-
+align-items: center;
+justify-content: center;
 }
 
 .row1 {
+  
+  max-width: 10000px;
   width: 100%;
-  justify-content: space-between;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .row2 {
+  flex-wrap: nowrap;
   display: flex;
   flex-direction: row;
   z-index:-100;
@@ -76,7 +79,14 @@ justify-content: center;
   justify-content:space-between;
 }
 .title {
+  
   align-items: center;
+}
+.year{
+  align-self: center;
+  /* justify-self: flex-end; */
+  justify-content: flex-end;
+  margin-left: 20px;
 }
 .links a {
   margin-right: 10px;
