--- a/src/CSS/Carousell.css
+++ b/src/CSS/Carousell.css
@@ -3,7 +3,7 @@
     padding: 60px 0;
     white-space: nowrap;
     /* position: absolute; */
-    margin-top: -280px;
+    margin-top: -240px;
     z-index:2;
     position: relative;
 }
@@ -15,6 +15,9 @@
 .slideElement{
     padding: 10px;
     font-size: 40px;
+    
+    margin: 10px!important;
+      
     
 }
 
