--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .heroText{
   font-size: 40px;
 }
@@ -47,7 +48,7 @@ justify-content: center;
 
   justify-content: center;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
   
 }
 
@@ -65,10 +66,10 @@ justify-content: center;
 
 .row1 {
   
-  max-width: 10000px;
+  /* max-width: 1000px; */
   width: 100%;
-  display: grid;
-    grid-template-columns: repeat(3, 1fr);
+ display:flex;
+ justify-content:space-between
 }
 .row2 {
   flex-wrap: nowrap;
@@ -94,17 +95,20 @@ justify-content: center;
 .links {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+ 
 }
 .descriere {
   display: flex;
   justify-content: center;
+  width: 100%;
+  white-space: pre-line;
   
 }
 .image {
   margin-left:20px;
   height:200px;
   aspect-ratio: auto;
+  float: right;
 }
 .sectionText{
   padding: 10px;
@@ -146,7 +150,7 @@ justify-content: center;
 
 
 .circle{
-  /* z-index: 1; */
+  z-index: 2;
 
 position:absolute;
 width: 150px;
@@ -208,4 +212,16 @@ animation: rotateText 10s linear infinite;
   border-style: solid;
   border-color: transparent;
   /* letter-spacing: 1.1px; */
+}
+
+
+@media only screen and (max-width: 500px) {
+
+.circle{
+
+bottom: 40px;
+right: 50%;
+transform: translateX(50%);
+}
+
 }
