--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -106,7 +106,9 @@ justify-content: center;
 }
 .image {
   margin-left:20px;
-  height:200px;
+  height:300px !important;
+  /* width:50%; */
+  height:auto;
   aspect-ratio: auto;
   float: right;
 }
@@ -131,9 +133,8 @@ justify-content: center;
   
 }
 .image {
-  margin-left:20px;
-  height:auto !important;
-  width:auto !important; 
+  width: auto !important;
+  height: auto !important;
   margin: 0;
 }
 
