--- a/src/CSS/Main.css
+++ b/src/CSS/Main.css
@@ -53,6 +53,8 @@ justify-content: center;
 }
 
 .worksElement {
+  display:flex;
+  flex-direction: column;
   -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
   -moz-box-sizing: border-box; /* Firefox, other Gecko */
   box-sizing: border-box; /* Opera/IE 8+ */
@@ -66,19 +68,17 @@ justify-content: center;
 
 .row1 {
   
-  /* max-width: 1000px; */
+  max-width: 1000px;
   width: 100%;
  display:flex;
  justify-content:space-between
 }
 .row2 {
-  flex-wrap: nowrap;
-  display: flex;
-  flex-direction: row;
-  z-index:-100;
-  position:relative;
-  justify-content:space-between;
-}
+  max-width: 1000px;
+  /* flex-wrap: nowrap; */
+  z-index:-1;
+  text-align:center;
+  }
 .title {
   
   align-items: center;
@@ -98,9 +98,8 @@ justify-content: center;
  
 }
 .descriere {
-  display: flex;
-  justify-content: center;
-  width: 100%;
+  /* width:100%; */
+  text-align: justify;
   white-space: pre-line;
   
 }
@@ -108,7 +107,7 @@ justify-content: center;
   margin-left:20px;
   height:300px !important;
   /* width:50%; */
-  height:auto;
+  /* height:auto; */
   aspect-ratio: auto;
   float: right;
 }
